--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -28,9 +28,13 @@
 			color: $color-primary;
 		}
 
-		ul {
+		ul a {
 			color: $color-primary;
 			list-style: none;
+
+			&:hover {
+				color: $color-light;
+			}
 
 
 			li {
