--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -12,13 +12,16 @@
 
 .portfolio-projects {
 		@media screen and (min-width: $break-small) {
-			margin-top: em(40px);
+			margin-top: em(10px);
 		}
 
 		&--title {
 			margin-top: em(15px);
 			@media screen and (min-width: $break-small) {
-				margin-top: 30%;
+				margin-top: 20%;
+			}
+			@media screen and (min-width: $break-large) {
+				margin-top: 5%;
 			}
 		}
 
@@ -44,5 +47,6 @@
 
 		&--image {
 			margin-bottom: em(30px);
+			padding-top: 5%;
 		}
 }
