--- a/scss/utilities/_helpers.scss
+++ b/scss/utilities/_helpers.scss
@@ -13,17 +13,17 @@
 }
 
 // Screen reader text
-
-.srt {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
-}
+//uncomment if not using bootstrap .sr-only
+// .srt {
+// 	border: 0;
+// 	clip: rect(0 0 0 0);
+// 	height: 1px;
+// 	margin: -1px;
+// 	overflow: hidden;
+// 	padding: 0;
+// 	position: absolute;
+// 	width: 1px;
+// }
 
 // Center alignment
 
